--- a/projects/FalklandV2/templates/index.html
+++ b/projects/FalklandV2/templates/index.html
@@ -214,7 +214,8 @@
     </section>
   </div>
 
-  <script>
+  <script src="/static/app.js"></script>
+  <script type="application/json" id="app-js-disabled">
     // ---------- Helpers ----------
     const $ = (sel)=>document.querySelector(sel);
     const $$ = (sel)=>document.querySelectorAll(sel);
